# libaccessom2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  libaccessom2.pc.in
.github/build-ci/data/: standard.json
.github/build-ci/manifests/: gcc-access-om2.spack.yaml.j2  intel-access-om2.spack.yaml.j2  intel-libaccessom2.spack.yaml.j2  oneapi-access-om2.spack.yaml.j2
.github/workflows/: ci.yml  test-build.yml
atm/src/: atm.F90  yatm_version.F90
cmake/: libaccessom2-config.cmake.in
ice_stub/src/: ice.F90  ice_version.F90
libcouple/src/: accessom2.F90  libaccessom2_version.F90
libforcing/src/: forcing_field.F90
ocean_stub/src/: ocean.F90  ocean_version.F90
